feat: use href="#" for all anchors | sas

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -17,19 +17,19 @@
       <p-button-pure class="header__button" theme="dark" icon="search" hide-label="true" type="button">Search
       </p-button-pure>
     </div>
-    <p-wordmark class="header__wordmark" href="/" theme="dark"></p-wordmark>
-    <p-crest class="header__crest" href="/"></p-crest>
+    <p-wordmark class="header__wordmark" href="#" theme="dark"></p-wordmark>
+    <p-crest class="header__crest" href="#"></p-crest>
     <div class="header__part header__part--end">
-      <p-link-pure href="/" class="header__link" theme="dark" icon="user" hide-label="true">Account</p-link-pure>
-      <p-link-pure href="/" class="header__link header__link--favorites" theme="dark" icon="heart" hide-label="true">
+      <p-link-pure href="#" class="header__link" theme="dark" icon="user" hide-label="true">Account</p-link-pure>
+      <p-link-pure href="#" class="header__link header__link--favorites" theme="dark" icon="heart" hide-label="true">
         Favorites
       </p-link-pure>
-      <p-link-pure href="/" class="header__link" theme="dark" icon="shopping-cart" hide-label="true">Shopping cart
+      <p-link-pure href="#" class="header__link" theme="dark" icon="shopping-cart" hide-label="true">Shopping cart
       </p-link-pure>
     </div>
     <nav class="header__categories" aria-label="Category Navigation">
       <p-tabs-bar theme="dark">
-        <a href="../shop-product-list/">Women</a>
+        <a href="#">Women</a>
         <a href="#">Men</a>
         <a href="#">Accessories</a>
         <a href="#">Model Cars</a>
@@ -49,11 +49,11 @@
       </div>
       <div class="teaser__header">
         <p-display theme="dark" align="center" size="small" tag="h1">Made by Dreamers,<br>for Dreamers</p-display>
-        <p-link href="/" theme="dark" variant="secondary">Shop Collection</p-link>
+        <p-link href="#" theme="dark" variant="secondary">Shop Collection</p-link>
       </div>
       <div class="teaser__content">
         <p-link-tile
-          href="/"
+          href="#"
           label="Shop Collection"
           description="Iconic Racing Design Taken To Perfection"
           aspect-ratio="{base: '1:1', xs: '4:3', s: '16:9'}"
@@ -63,7 +63,7 @@
                height="736" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile>
         <p-link-tile
-          href="/"
+          href="#"
           label="Shop Collection"
           description="Transformers: Rise Of The Beasts X Porsche"
           aspect-ratio="{base: '1:1', xs: '4:3', s: '16:9'}"
@@ -79,7 +79,7 @@
       <p-carousel slides-per-page="{ base: 2, s: 3 }" align-header="center" width="basic">
         <div slot="heading" class="trending-products__header">
           <p-display size="small" align="center" tag="h2">Trending Products</p-display>
-          <p-link-pure href="/">Discover all trending products</p-link-pure>
+          <p-link-pure href="#">Discover all trending products</p-link-pure>
         </div>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Weekender" price="911,00 €"
                              like-button="false" href="#">
@@ -107,21 +107,21 @@
           <p-text size="x-large" align="center">Put a spring in your step and refresh your wardrobe with inspired looks
             from the Porsche catalogue.
           </p-text>
-          <p-link href="/">Shop the Look</p-link>
+          <p-link href="#">Shop the Look</p-link>
         </div>
-        <p-link-tile href="/" label="Timeless Enthusiast" description="Timeless Enthusiast" compact="true"
+        <p-link-tile href="#" label="Timeless Enthusiast" description="Timeless Enthusiast" compact="true"
                      aspect-ratio="{base: '1:1', xs: '3:4'}" weight="regular">
           <img srcset="assets/timeless-enthusiastt-teaser@2x.webp 2x"
                src="assets/timeless-enthusiastt-teaser.webp" width="636" height="848"
                alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile>
-        <p-link-tile href="/" label="The Loyalist" description="The Loyalist" compact="true"
+        <p-link-tile href="#" label="The Loyalist" description="The Loyalist" compact="true"
                      aspect-ratio="{base: '1:1', xs: '3:4'}"
                      weight="regular">
           <img srcset="assets/loyalist-teaser@2x.webp 2x" src="assets/loyalist-teaser.webp" width="636"
                height="848" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile>
-        <p-link-tile href="/" label="Urbanist" description="Urbanist" compact="true"
+        <p-link-tile href="#" label="Urbanist" description="Urbanist" compact="true"
                      aspect-ratio="{base: '1:1', xs: '3:4'}" weight="regular">
           <img srcset="assets/urbanist-teaser@2x.webp 2x" src="assets/urbanist-teaser.webp" width="636"
                height="848" alt="Some alternative text for screen readers describing the image"/>
@@ -141,7 +141,7 @@
         </p-text>
       </div>
       <div class="collection__content">
-        <p-link-tile href="/" label="FIN Crafted Goods X Porsche Collection"
+        <p-link-tile href="#" label="FIN Crafted Goods X Porsche Collection"
                      description="FIN Crafted Goods X Porsche Collection" compact="true"
                      aspect-ratio="{base: '1:1', xs: '4:3', s: '16:9'}"
                      weight="regular">
@@ -150,7 +150,7 @@
         </p-link-tile>
       </div>
       <div class="collection__footer">
-        <p-link-pure href="/" theme="dark" underline="true" icon="none">see other collections</p-link-pure>
+        <p-link-pure href="#" theme="dark" underline="true" icon="none">see other collections</p-link-pure>
       </div>
     </section>
     <section class="stories">
@@ -158,21 +158,21 @@
         <p-display size="small" align="center" tag="h2">Stories</p-display>
       </div>
       <div class="stories__content">
-        <p-link-tile href="/" label="Porsche Mission X: yet another dream takes shape."
+        <p-link-tile href="#" label="Porsche Mission X: yet another dream takes shape."
                      description="Porsche Mission X: yet another dream takes shape." compact="true"
                      aspect-ratio="{base: '1:1', xs: '4:3', s: '16:9'}"
                      weight="regular">
           <img srcset="assets/mission-x-story@2x.webp 2x" src="assets/mission-x-story.webp" width="1308"
                height="847" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile>
-        <p-link-tile href="/" label="Speed meets style: the design of the Porsche 963"
+        <p-link-tile href="#" label="Speed meets style: the design of the Porsche 963"
                      description="Speed meets style: the design of the Porsche 963" compact="true"
                      aspect-ratio="{base: '1:1', xs: '4:3', s: '3:4'}"
                      weight="regular">
           <img srcset="assets/porsche-963-story@2x.webp 2x" src="assets/porsche-963-story.webp"
                width="636" height="847" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile>
-        <p-link-tile href="/" label="Unique specimen under the hammer: 911 Classic Club Coupe sold for record price"
+        <p-link-tile href="#" label="Unique specimen under the hammer: 911 Classic Club Coupe sold for record price"
                      description="Unique specimen under the hammer: 911 Classic Club Coupe sold for record price"
                      compact="true" aspect-ratio="{base: '1:1', xs: '4:3', s: '3:4'}" weight="regular">
           <img srcset="assets/club-sport-story@2x.webp 2x" src="assets/club-sport-story.webp" width="636"
