--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -14,14 +14,14 @@
       </p-button-pure>
       <p-button-pure class="header__button" icon="search" hide-label="true" type="button">Search</p-button-pure>
     </div>
-    <p-wordmark class="header__wordmark" href="../shop-landing-page/"></p-wordmark>
-    <p-crest class="header__crest" href="../shop-landing-page/"></p-crest>
+    <p-wordmark class="header__wordmark" href="#"></p-wordmark>
+    <p-crest class="header__crest" href="#"></p-crest>
     <div class="header__part header__part--end">
-      <p-link-pure href="/" class="header__link" icon="user" hide-label="true">Account</p-link-pure>
-      <p-link-pure href="/" class="header__link header__link--favorites" icon="heart" hide-label="true">
+      <p-link-pure href="#" class="header__link" icon="user" hide-label="true">Account</p-link-pure>
+      <p-link-pure href="#" class="header__link header__link--favorites" icon="heart" hide-label="true">
         Favorites
       </p-link-pure>
-      <p-link-pure href="/" class="header__link" icon="shopping-cart" hide-label="true">Shopping cart
+      <p-link-pure href="#" class="header__link" icon="shopping-cart" hide-label="true">Shopping cart
       </p-link-pure>
     </div>
     <nav class="header__categories" aria-label="Category Navigation">
@@ -38,11 +38,11 @@
   <main>
     <!--    <nav class="breadcrumb" aria-label="Breadcrumb navigation">-->
     <!--      <ol>-->
-    <!--        <li><p-link-pure href="../shop-landing-page/" size="x-small" underline="true" icon="none">Home</p-link-pure></li>-->
+    <!--        <li><p-link-pure href="#" size="x-small" underline="true" icon="none">Home</p-link-pure></li>-->
     <!--        <li class="breadcrumb__divider" role="presentation" aria-hidden="true">/</li>-->
-    <!--        <li><p-link-pure href="../shop-product-list/" size="x-small" underline="true" icon="none">Woman</p-link-pure></li>-->
+    <!--        <li><p-link-pure href="#" size="x-small" underline="true" icon="none">Woman</p-link-pure></li>-->
     <!--        <li class="breadcrumb__divider" role="presentation" aria-hidden="true">/</li>-->
-    <!--        <li><p-link-pure href="./" size="x-small" icon="none" aria="{ 'aria-current': 'page' }" class="breadcrumb&#45;&#45;current">Shoes</p-link-pure></li>-->
+    <!--        <li><p-link-pure href="#" size="x-small" icon="none" aria="{ 'aria-current': 'page' }" class="breadcrumb&#45;&#45;current">Shoes</p-link-pure></li>-->
     <!--      </ol>-->
     <!--    </nav>-->
     <section class="teaser">
@@ -52,7 +52,7 @@
       </div>
       <div class="teaser__header">
         <p-display theme="dark" align="center" size="small" tag="h1">Women</p-display>
-        <p-link-pure href="/" theme="dark" icon="none" underline="true" variant="secondary">See Products</p-link-pure>
+        <p-link-pure href="#" theme="dark" icon="none" underline="true" variant="secondary">See Products</p-link-pure>
       </div>
     </section>
     <section class="products">
