feat: add flyout search results | sas

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -300,13 +300,36 @@
   </div>
 </p-flyout>
 
-<p-flyout id="flyout-search">
+<p-flyout id="flyout-search" class="flyout-search">
   <div slot="header">
     <p-heading tag="h2" size="large">Search products</p-heading>
   </div>
   <p-text-field-wrapper label="Search for products" hide-label="true">
     <input type="search" name="search" placeholder="e.g. Sneaker, T-Shirt,…"/>
   </p-text-field-wrapper>
+  <div class="flyout-search__results">
+    <a class="flyout-search__result" href="#">
+      <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
+           src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+           height="1080" alt="Some alternative text for screen readers describing the image"/>
+      <p-heading size="small" tag="h3">Weekender</p-heading>
+      <p-text>911,00 €</p-text>
+    </a>
+    <a class="flyout-search__result" href="#">
+      <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
+           src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+           height="1080" alt="Some alternative text for screen readers describing the image"/>
+      <p-heading size="small" tag="h3">Weekender</p-heading>
+      <p-text>911,00 €</p-text>
+    </a>
+    <a class="flyout-search__result" href="#">
+      <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
+           src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+           height="1080" alt="Some alternative text for screen readers describing the image"/>
+      <p-heading size="small" tag="h3">Weekender</p-heading>
+      <p-text>911,00 €</p-text>
+    </a>
+  </div>
 </p-flyout>
 
 <p-flyout-navigation id="flyout-menu" active-identifier="women">
