feat: improve flyout search results styling | sas

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -193,26 +193,26 @@
     <input type="search" name="search" placeholder="e.g. Sneaker, T-Shirt,…"/>
   </p-text-field-wrapper>
   <div class="flyout-search__results">
-    <a class="flyout-search__result" href="#">
+    <a href="#">
       <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
            src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
            height="1080" alt="Some alternative text for screen readers describing the image"/>
-      <p-heading size="small" tag="h3">Weekender</p-heading>
-      <p-text>911,00 €</p-text>
+      <b>Weekender</b>
+      911,00 €
     </a>
-    <a class="flyout-search__result" href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+    <a href="#">
+      <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
+           src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
            height="1080" alt="Some alternative text for screen readers describing the image"/>
-      <p-heading size="small" tag="h3">Weekender</p-heading>
-      <p-text>911,00 €</p-text>
+      <b>Sneaker</b>
+      911,00 €
     </a>
-    <a class="flyout-search__result" href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+    <a href="#">
+      <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
+           src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
            height="1080" alt="Some alternative text for screen readers describing the image"/>
-      <p-heading size="small" tag="h3">Weekender</p-heading>
-      <p-text>911,00 €</p-text>
+      <b>Porsche Wappen-Schlüsselanhänger Charging Service</b>
+      911,00 €
     </a>
   </div>
 </p-flyout>
