feat: improve flyout filter styling | sas

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -164,7 +164,7 @@
     <p-heading tag="h2" size="large">Product Filter</p-heading>
   </div>
   <p-accordion heading="Price Range" tag="h3">
-    <div class="flyout-filter__settings flyout-filter__settings--gap-medium">
+    <div class="flyout-filter__settings">
       <p-text-field-wrapper label="Minimum Price">
         <input type="number" name="min-price"/>
       </p-text-field-wrapper>
@@ -174,7 +174,7 @@
     </div>
   </p-accordion>
   <p-accordion heading="Gender" tag="h3">
-    <div class="flyout-filter__settings flyout-filter__settings--gap-small">
+    <div class="flyout-filter__settings">
       <p-checkbox-wrapper label="Women">
         <input type="checkbox" name="woman"/>
       </p-checkbox-wrapper>
@@ -190,7 +190,7 @@
     </div>
   </p-accordion>
   <p-accordion heading="Collection" tag="h3">
-    <div class="flyout-filter__settings flyout-filter__settings--gap-small">
+    <div class="flyout-filter__settings">
       <p-checkbox-wrapper label="Dakar">
         <input type="checkbox" name="dakar"/>
       </p-checkbox-wrapper>
@@ -215,7 +215,7 @@
     </div>
   </p-accordion>
   <p-accordion heading="Color" tag="h3">
-    <div class="flyout-filter__settings flyout-filter__settings--gap-small">
+    <div class="flyout-filter__settings">
       <p-checkbox-wrapper label="Blue">
         <input type="checkbox" name="blue"/>
       </p-checkbox-wrapper>
