feat: improve patterns | sas / oh

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -266,13 +266,17 @@
   <div slot="header">
     <p-heading tag="h2" size="large">Add to Wishlist</p-heading>
   </div>
-  <div class="flyout-wishlist__thumbnail"></div>
-  <p-heading tag="h3" size="large" class="flyout-wishlist__heading">EviKnit® Trainers II</p-heading>
-  <p-text weight="semi-bold">SGD 680</p-text>
-  <p-text class="flyout-wishlist__description">
-    Tongueless sports shoe in a modern sock-shoe style. Exclusive design using PUMA EvoKNIT® knit with a NITRO FOAM®
-    sole for dynamism, cushioning and stability.
-  </p-text>
+  <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
+       src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+       height="1080" alt="Some alternative text for screen readers describing the image"/>
+  <div class="flyout-wishlist__header">
+    <p-heading tag="h3" size="large">EviKnit® Trainers II</p-heading>
+    <p-text weight="semi-bold">SGD 680</p-text>
+    <p-text>
+      Tongueless sports shoe in a modern sock-shoe style. Exclusive design using PUMA EvoKNIT® knit with a NITRO FOAM®
+      sole for dynamism, cushioning and stability.
+    </p-text>
+  </div>
   <div class="flyout-wishlist__color">
     <h4>Color: <span>Black</span></h4>
     <div class="flyout-wishlist__color-swatch"></div>
@@ -296,6 +300,8 @@
       <p-segmented-control-item value="eu46">EU 46</p-segmented-control-item>
     </p-segmented-control>
     <p-button-pure type="button" icon="information" id="button-size-chart">View size chart</p-button-pure>
+  </div>
+  <div class="flyout-wishlist__footer">
     <p-button type="button">Add to wishlist</p-button>
   </div>
 </p-flyout>
@@ -311,21 +317,21 @@
     <a href="#">
       <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
            src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
-           height="1080" alt="Some alternative text for screen readers describing the image"/>
+           height="1080" alt=""/>
       <b>Weekender</b>
       911,00 €
     </a>
     <a href="#">
       <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
            src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
-           height="1080" alt="Some alternative text for screen readers describing the image"/>
+           height="1080" alt=""/>
       <b>Sneaker</b>
       911,00 €
     </a>
     <a href="#">
       <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
            src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
-           height="1080" alt="Some alternative text for screen readers describing the image"/>
+           height="1080" alt=""/>
       <b>Porsche Wappen-Schlüsselanhänger Charging Service</b>
       911,00 €
     </a>
