--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -8,24 +8,23 @@
 <body>
 <div id="app">
   <header class="header">
-    <div class="header__part header__part--start">
-      <p-button-pure id="button-menu" class="header__button" icon="menu-lines" hide-label="{base: true, xs: false}"
-                     type="button"
-                     aria="{ 'aria-haspopup': 'dialog', 'aria-label': 'Main navigation menu' }">Menu
-      </p-button-pure>
-      <p-button-pure id="button-search" class="header__button" icon="search" hide-label="true"
-                     type="button" aria="{ 'aria-haspopup': 'dialog', 'aria-label': 'Search' }">Search
-      </p-button-pure>
-    </div>
-    <p-wordmark class="header__wordmark" href="#"></p-wordmark>
-    <p-crest class="header__crest" href="#"></p-crest>
-    <div class="header__part header__part--end">
-      <p-link-pure href="#" class="header__link" icon="user" hide-label="true">Account</p-link-pure>
-      <p-link-pure href="#" class="header__link header__link--favorites" icon="heart" hide-label="true">
-        Favorites
-      </p-link-pure>
-      <p-link-pure href="#" class="header__link" icon="shopping-cart" hide-label="true">Shopping cart
-      </p-link-pure>
+    <div class="header__nav">
+      <div class="header__part">
+        <p-button-pure id="button-menu" icon="menu-lines"
+                       hide-label="{base: true, xs: false}"
+                       type="button" aria="{ 'aria-haspopup': 'dialog', 'aria-label': 'Main navigation menu' }">Menu
+        </p-button-pure>
+        <p-button-pure id="button-search" icon="search" hide-label="true"
+                       type="button" aria="{ 'aria-haspopup': 'dialog', 'aria-label': 'Search' }">Search
+        </p-button-pure>
+      </div>
+      <p-wordmark href="#"></p-wordmark>
+      <p-crest href="#"></p-crest>
+      <div class="header__part">
+        <p-link-pure href="#" icon="user" hide-label="true">Account</p-link-pure>
+        <p-link-pure href="#" icon="heart" hide-label="true">Favorites</p-link-pure>
+        <p-link-pure href="#" icon="shopping-cart" hide-label="true">Shopping cart</p-link-pure>
+      </div>
     </div>
     <nav class="header__categories" aria-label="Category Navigation">
       <p-tabs-bar active-tab-index="0">
