feat: improve aria | sas / oh

--- a/patterns/shop-homepage/index.html
+++ b/patterns/shop-homepage/index.html
@@ -27,7 +27,7 @@
         <p-link-pure href="#" theme="dark" icon="shopping-cart" hide-label="true">Shopping cart</p-link-pure>
       </div>
     </div>
-    <nav class="header__categories" aria-label="Category Navigation">
+    <nav class="header__categories" aria-label="Category navigation">
       <p-tabs-bar theme="dark">
         <a href="#">Women</a>
         <a href="#">Men</a>
@@ -216,7 +216,7 @@
   </div>
 </p-flyout>
 
-<p-flyout-navigation id="flyout-menu">
+<p-flyout-navigation id="flyout-menu" aria="{'aria-label': 'Main navigation'}">
   <p-flyout-navigation-item identifier="women" label="Women">
     <p-link-tile
       href="#"
