--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -26,7 +26,7 @@
         <p-link-pure href="#" icon="shopping-cart" hide-label="true">Shopping cart</p-link-pure>
       </div>
     </div>
-    <nav class="header__categories" aria-label="Category Navigation">
+    <nav class="header__categories" aria-label="Category navigation">
       <p-tabs-bar active-tab-index="0">
         <a href="#" aria-current="page">Women</a>
         <a href="#">Men</a>
@@ -337,7 +337,7 @@
   </div>
 </p-flyout>
 
-<p-flyout-navigation id="flyout-menu" active-identifier="women">
+<p-flyout-navigation id="flyout-menu" active-identifier="women" aria="{'aria-label': 'Main navigation'}">
   <p-flyout-navigation-item identifier="women" label="Women">
     <p-link-tile
       href="#"
