--- a/patterns/shop-checkout/index.html
+++ b/patterns/shop-checkout/index.html
@@ -8,30 +8,188 @@
 </head>
 <body>
 <div id="app">
+
+  <header>
+    <div>
+      <p-link-pure href="#" icon="arrow-left">Back</p-link-pure>
+    </div>
+    <p-wordmark href="#"></p-wordmark>
+    <p-crest href="#"></p-crest>
+  </header>
+
   <main>
-    <section class="foo">
-      <div class="foo__header">
-        <p-link-pure href="#">Back</p-link-pure>
-        <p-wordmark></p-wordmark>
-        <p-crest></p-crest>
-      </div>
-      <div class="foo__content">
-        <p-heading align="center">Checkout</p-heading>
+    <div class="login">
+      <h1 class="heading-xx-large">Checkout</h1>
+      <h2 class="heading-large">Please Login with Prosche ID or use the guest checkout</h2>
+      <div class="login__inputs">
         <p-text-field-wrapper label="Firstname">
-          <input type="text" name="foo" />
+          <input type="text" name="foo" required/>
         </p-text-field-wrapper>
         <p-text-field-wrapper label="Lastname">
-          <input type="text" name="foo" />
+          <input type="text" name="foo" required/>
         </p-text-field-wrapper>
         <p-text-field-wrapper label="Address">
-          <input type="text" name="foo" />
+          <input type="text" name="foo" required/>
         </p-text-field-wrapper>
+        <div class="login__inputs__actions">
+          <p-checkbox-wrapper label="Remember me">
+            <input type="checkbox" name="foo"/>
+          </p-checkbox-wrapper>
+          <p-link-pure underline="true" href="/">Forgot password?</p-link-pure>
+        </div>
       </div>
-      <div class="foo__sidebar">
-        <p-text>Card</p-text>
+      <p-button>Log In</p-button>
+      <div class="login__divider">
+        <p-divider></p-divider>
+        <p>or</p>
+        <p-divider></p-divider>
       </div>
-    </section>
+      <p-button variant="secondary">Guest Checkout</p-button>
+    </div>
+
+    <div class="checkout">
+      <section>
+        <div class="checkout__heading">
+          <h2 class="heading-large">1. Personal Details</h2>
+        </div>
+        <p-radio-button-wrapper label="Pick up your items at the next store">
+          <input type="radio" name="foo"/>
+        </p-radio-button-wrapper>
+        <p-radio-button-wrapper label="Home Delivery">
+          <input type="radio" name="foo"/>
+        </p-radio-button-wrapper>
+        <div class="checkout__inputs">
+          <p-text-field-wrapper label="Address Name (e.g.) Home, Office, etc.">
+            <input type="text" name="foo"/>
+          </p-text-field-wrapper>
+          <div class="checkout__inputs__name">
+            <p-text-field-wrapper label="First Name">
+              <input type="text" name="foo" required/>
+            </p-text-field-wrapper>
+            <p-text-field-wrapper label="Last Name">
+              <input type="text" name="foo" required/>
+            </p-text-field-wrapper>
+          </div>
+          <p-text-field-wrapper label="Address 1">
+            <input type="text" name="foo" required/>
+          </p-text-field-wrapper>
+          <p-text-field-wrapper label="Address 2">
+            <input type="text" name="foo"/>
+          </p-text-field-wrapper>
+          <p-select-wrapper filter="true" label="Some label">
+            <select name="some-name">
+              <option>Select country</option>
+              <option value="AF">Afghanistan</option>
+              <option value="AX">Åland Islands</option>
+              <option value="AL">Albania</option>
+              <option value="DZ">Algeria</option>
+              <option value="AS">American Samoa</option>
+              <option value="AD">Andorra</option>
+              <option value="AO">Angola</option>
+              <option value="AI">Anguilla</option>
+              <option value="AQ" disabled>Antarctica</option>
+              <option value="AG">Antigua and Barbuda</option>
+              <option value="AR">Argentina</option>
+              <option value="AM">Armenia</option>
+              <option value="AW">Aruba</option>
+              <option value="AU">Australia</option>
+              <option value="AT">Austria</option>
+              <option value="AZ">Azerbaijan</option>
+            </select>
+          </p-select-wrapper>
+          <p-text-field-wrapper label="Zip / postal code">
+            <input type="text" name="foo" required/>
+          </p-text-field-wrapper>
+          <p-text-field-wrapper label="Phone" unit="+49" unit-position="prefix">
+            <input type="number" name="foo" required/>
+          </p-text-field-wrapper>
+        </div>
+        <p-checkbox-wrapper label="Bill to this address">
+          <input type="checkbox" name="foo" checked/>
+        </p-checkbox-wrapper>
+        <p-checkbox-wrapper label="Ship to this address">
+          <input type="checkbox" name="foo" checked/>
+        </p-checkbox-wrapper>
+        <p-button-pure icon="plus">Add shipping address</p-button-pure>
+        <div>
+          <p-button>Continue to shipping</p-button>
+        </div>
+      </section>
+      <section>
+        <div class="checkout__heading">
+          <h2 class="heading-large color--disabled">2. Shipping</h2>
+          <p-icon name="lock" color="state-disabled" aria="{ 'aria-label': 'Lock icon' }"></p-icon>
+        </div>
+      </section>
+      <section>
+        <div class="checkout__heading">
+          <h2 class="heading-large color--disabled">3. Payment</h2>
+          <p-icon name="lock" color="state-disabled" aria="{ 'aria-label': 'Lock icon' }"></p-icon>
+        </div>
+      </section>
+      <section>
+        <div class="checkout__heading">
+          <h2 class="heading-large color--disabled">4. Summary</h2>
+          <p-icon name="lock" color="state-disabled" aria="{ 'aria-label': 'Lock icon' }"></p-icon>
+        </div>
+      </section>
+    </div>
   </main>
+
+  <aside class="shopping-cart">
+    <div class="shopping-cart__products">
+      <a href="#">
+        <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
+             src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+             height="1080" alt=""/>
+        <div><b class="text-x-small">Porsche Bracelet</b>
+          <p class="text-xx-small">Black, One Size</p></div>
+        <p class="text-small">911,00 €</p>
+      </a>
+      <a href="#">
+        <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
+             src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+             height="1080" alt=""/>
+        <div><b class="text-x-small">Porsche Bracelet</b>
+          <p class="text-xx-small">Black, One Size</p></div>
+        <p class="text-small">911,00 €</p>
+      </a>
+      <a href="#">
+        <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
+             src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+             height="1080" alt=""/>
+        <div><b class="text-x-small">Porsche Bracelet</b>
+          <p class="text-xx-small">Black, One Size</p></div>
+        <p class="text-small">911,00 €</p>
+      </a>
+      <a href="#">
+        <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
+             src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
+             height="1080" alt=""/>
+        <div><b class="text-x-small">EvoKNIT® Trainers II</b>
+          <p class="text-xx-small">Black, One Size</p></div>
+        <p class="text-small">911,00 €</p>
+      </a>
+    </div>
+    <div class="shopping-cart__summary">
+      <div>
+        <p>Subtotal</p>
+        <p>SGD 340.00</p>
+      </div>
+      <div>
+        <p>*GST Inclusive</p>
+        <p>SGD 25.19</p>
+      </div>
+      <div>
+        <p>Shipping</p>
+        <p>SDG 0.00</p>
+      </div>
+      <div>
+        <p>Grand Total</p>
+        <p>SDG 340.00</p>
+      </div>
+    </div>
+  </aside>
 </div>
 
 <script type="module" src="main.js"></script>
