--- a/patterns/shop-checkout/index.html
+++ b/patterns/shop-checkout/index.html
@@ -10,26 +10,23 @@
 <div id="app">
 
   <header>
-    <div>
+    <nav>
       <p-link-pure href="#" icon="arrow-left">Back</p-link-pure>
-    </div>
+    </nav>
     <p-wordmark href="#"></p-wordmark>
     <p-crest href="#"></p-crest>
   </header>
 
   <main>
+    <h1 class="heading-xx-large">Checkout</h1>
     <div class="login">
-      <h1 class="heading-xx-large">Checkout</h1>
       <h2 class="heading-large">Please Login with Prosche ID or use the guest checkout</h2>
       <div class="login__inputs">
-        <p-text-field-wrapper label="Firstname">
+        <p-text-field-wrapper label="Email">
           <input type="text" name="foo" required/>
         </p-text-field-wrapper>
-        <p-text-field-wrapper label="Lastname">
-          <input type="text" name="foo" required/>
-        </p-text-field-wrapper>
-        <p-text-field-wrapper label="Address">
-          <input type="text" name="foo" required/>
+        <p-text-field-wrapper label="Password" show-password-toggle="false">
+          <input type="password" name="foo" required />
         </p-text-field-wrapper>
         <div class="login__inputs__actions">
           <p-checkbox-wrapper label="Remember me">
@@ -56,7 +53,7 @@
           <input type="radio" name="foo"/>
         </p-radio-button-wrapper>
         <p-radio-button-wrapper label="Home Delivery">
-          <input type="radio" name="foo"/>
+          <input type="radio" name="foo" checked />
         </p-radio-button-wrapper>
         <div class="checkout__inputs">
           <p-text-field-wrapper label="Address Name (e.g.) Home, Office, etc.">
@@ -136,57 +133,59 @@
     </div>
   </main>
 
-  <aside class="shopping-cart">
-    <div class="shopping-cart__products">
-      <a href="#">
-        <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-             src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
-             height="1080" alt=""/>
-        <div><b class="text-x-small">Porsche Bracelet</b>
-          <p class="text-xx-small">Black, One Size</p></div>
-        <p class="text-small">911,00 €</p>
-      </a>
-      <a href="#">
-        <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
-             src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
-             height="1080" alt=""/>
-        <div><b class="text-x-small">Porsche Bracelet</b>
-          <p class="text-xx-small">Black, One Size</p></div>
-        <p class="text-small">911,00 €</p>
-      </a>
-      <a href="#">
-        <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
-             src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
-             height="1080" alt=""/>
-        <div><b class="text-x-small">Porsche Bracelet</b>
-          <p class="text-xx-small">Black, One Size</p></div>
-        <p class="text-small">911,00 €</p>
-      </a>
-      <a href="#">
-        <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
-             src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
-             height="1080" alt=""/>
-        <div><b class="text-x-small">EvoKNIT® Trainers II</b>
-          <p class="text-xx-small">Black, One Size</p></div>
-        <p class="text-small">911,00 €</p>
-      </a>
-    </div>
-    <div class="shopping-cart__summary">
-      <div>
-        <p>Subtotal</p>
-        <p>SGD 340.00</p>
+  <aside>
+    <div class="shopping-cart">
+      <div class="shopping-cart__products">
+        <a href="#">
+          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
+               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+               height="1080" alt=""/>
+          <div><b class="text-x-small">Porsche Bracelet</b>
+            <p class="text-xx-small">Black, One Size</p></div>
+          <p class="text-small">911,00 €</p>
+        </a>
+        <a href="#">
+          <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
+               src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+               height="1080" alt=""/>
+          <div><b class="text-x-small">Porsche Bracelet</b>
+            <p class="text-xx-small">Black, One Size</p></div>
+          <p class="text-small">911,00 €</p>
+        </a>
+        <a href="#">
+          <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
+               src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+               height="1080" alt=""/>
+          <div><b class="text-x-small">Porsche Bracelet</b>
+            <p class="text-xx-small">Black, One Size</p></div>
+          <p class="text-small">911,00 €</p>
+        </a>
+        <a href="#">
+          <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
+               src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
+               height="1080" alt=""/>
+          <div><b class="text-x-small">EvoKNIT® Trainers II</b>
+            <p class="text-xx-small">Black, One Size</p></div>
+          <p class="text-small">911,00 €</p>
+        </a>
       </div>
-      <div>
-        <p>*GST Inclusive</p>
-        <p>SGD 25.19</p>
-      </div>
-      <div>
-        <p>Shipping</p>
-        <p>SDG 0.00</p>
-      </div>
-      <div>
-        <p>Grand Total</p>
-        <p>SDG 340.00</p>
+      <div class="shopping-cart__summary">
+        <div>
+          <p>Subtotal</p>
+          <p>SGD 340.00</p>
+        </div>
+        <div>
+          <p>*GST Inclusive</p>
+          <p>SGD 25.19</p>
+        </div>
+        <div>
+          <p>Shipping</p>
+          <p>SDG 0.00</p>
+        </div>
+        <div>
+          <p>Grand Total</p>
+          <p>SDG 340.00</p>
+        </div>
       </div>
     </div>
   </aside>
